# awsforwarder

./: CHANGELOG.md  CMakeLists.txt  README.md  appicon.rc
.github/pages/: index.html
.github/workflows/: build-release.yml
include/: MainWidget.h  MainWindow.h  ServiceDetailsDialog.h  Version.h
include/dto/kubernetes/: Container.h  Environment.h  Forwarder.h  Item.h  ObjectMeta.h  Pod.h  PodSpec.h  PullPolicy.h
include/dto/onelogin/: OneLoginApiTokenRequest.h  OneLoginApiTokenResponse.h  SamlAssertionRequest.h  SamlAssertionResponse.h  SamlVerifyRequest.h  SamlVerifyResponse.h
include/dto/onelogin/model/: OneLoginApiTokenResponseData.h  OneLoginStatus.h  SamlAssertionDevice.h  SamlAssertionUser.h
include/kubernetes/: KubernetesWorker.h
include/secrets/: SecretsWorker.h
include/session/: SessionWorker.h
include/utils/: AwsUtils.h  BaseService.h  Bytes.h  Configuration.h  EventBus.h  ForwarderConfig.h  IconUtils.h  JsonUtils.h  KubernetesService.h  KubernetesUtils.h  LoggingUtils.h  OneLoginService.h  OneLoginUtils.h  Otp.h  OtpUtils.h  RestManager.h  Sha1.h  SystemUtils.h
installer/config/: config.xml  repositories.xml
resources/: awsforwarder.qrc
resources/styles/: dark.qss
src/: MainWidget.cpp  MainWidget.ui  MainWindow.cpp  ServiceDetailsDialog.cpp  ServiceDetailsDialog.ui  main.cpp
src/kubernetes/: KubernetesWorker.cpp
src/secrets/: SecretsWorker.cpp
src/service/: KubernetesService.cpp  OneLoginService.cpp
src/session/: SessionWorker.cpp
src/utils/: AwsUtils.cpp  Bytes.cpp  Configuration.cpp  IconUtils.cpp  KubernetesService.cpp  KubernetesUtils.cpp  OneLoginService.cpp  OneLoginUtils.cpp  Otp.cpp  OtpUtils.cpp  RestManager.cpp  Sha1.cpp
